--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -17,13 +17,16 @@ build:
 
 requirements:
   host:
-    - python >=3.6
+    - python >=3.7
+    - setuptools >=40.6.0
+    - wheel
+    - poetry-core
     - pip
   run:
-    - python >=3.6
-    - packaging >=14.1
-    - pytest >=2.9
-    - termcolor >=1.1.0
+    - python >=3.7
+    - packaging >=21.3
+    - pytest >=6.2.0
+    - termcolor >=2.1.0
 
 test:
   imports:
